non_executable_reasons_record_from_random_10k/8614.txt
3.5
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
print boston.DESCR
------------------

[0;36m  File [0;32m"<ipython-input-1-09c80725bb73>"[0;36m, line [0;32m3[0m
[0;31m    print boston.DESCR[0m
[0m               ^[0m
[0;31mSyntaxError[0m[0;31m:[0m Missing parentheses in call to 'print'

SyntaxError: Missing parentheses in call to 'print' (<ipython-input-1-09c80725bb73>, line 3)

Executability                            : False
